Fixed double scrollbar, added post-card id to comment

--- a/main_app/static/styles/main.css
+++ b/main_app/static/styles/main.css
@@ -17,6 +17,10 @@ body {
     overflow: auto;
 }
 
+.body-container___base::-webkit-scrollbar {
+    display: none;
+  }
+  
 .navbar {
     background-color: #b0f3ec;
     font-family: 'Montserrat', sans-serif;
